# sitegen

./: README.md  flake.nix  pyproject.toml
sitegen/: __init__.py  build.py  utils.py
sitegen/.github/workflows/: build-deploy.yml
sitegen/templates/: blog.html.jinja  header.html.jinja  navbar.html.jinja  post_block.html.jinja  post_temp.html.jinja  post_temp.json  project_block.html.jinja  project_page.html.jinja  projects.html.jinja  tag.html.jinja  tags.html.jinja
tests/site/: about.html  bar.html  blog.html  foo.html  index.html  projects.html  under_construction.html
tests/site/posts/post1/: post1.html
tests/site/posts/post2/: post2.html
tests/site/posts/post3/: post3.html
tests/site/projects/project1/: project.html
tests/site/projects/project2/: project.html
tests/site/static/: styles.css
tests/src/: about.html.jinja  index.html.jinja  under_construction.html.jinja
tests/test_posts/post1/: post.json  post1.ipynb
tests/test_posts/post2/: post.json  post2.fdb_latexmk  post2.fls  post2.tex
tests/test_posts/post3/: post.json  post3.md
tests/test_projects/project1/: proj.json
tests/test_projects/project2/: proj.json
